# SparkPilot

./: .env.example  .gitguardian.yaml  .gitignore  Makefile  PROGRESS.md  README.md  SparkPilot-threat-model.md  alembic.ini  byoc-policy-expanded.json  byoc-policy-live.json  docker-compose.airflow.yml  docker-compose.yml  e2e_setup.py  pyproject.toml  security_best_practices_report.md  tmp_open_issues.json  tmp_open_issues_labels.csv
.github/: pull_request_template.md
alembic/: env.py
dags/: sparkpilot_minimal_run_dag.py
docker/: api.Dockerfile  ui.Dockerfile  worker.Dockerfile
docs/: README.md  architecture.md  auth-config.md  business-overview.md  byoc-lite-misconfiguration-matrix.md  deployment.md  execution-tracker.md  fgac-setup.md  gtm-weekly-scorecard.md  iam-credential-chain-validation.md  jira-setup.md  oidc-interoperability-matrix.md  poc-success-criteria-template.md  pod-identity-setup.md  runbooks.md  security-configuration-setup.md  security-one-pager-template.md
providers/airflow/: README.md  docker-compose.integration.yml  pyproject.toml
providers/airflow/examples/dags/: example_sparkpilot_dag.py
providers/airflow/src/airflow/providers/sparkpilot/: __init__.py  _compat.py  common.py  get_provider_info.py
providers/airflow/src/airflow/providers/sparkpilot/hooks/: __init__.py  sparkpilot.py
providers/airflow/src/airflow/providers/sparkpilot/operators/: __init__.py  sparkpilot.py
providers/airflow/src/airflow/providers/sparkpilot/sensors/: __init__.py  sparkpilot.py
providers/airflow/src/airflow/providers/sparkpilot/triggers/: __init__.py  sparkpilot.py
providers/airflow/tests/integration/: airflow_integration_dag.py  setup_sparkpilot_job.py  validate_dag_run.py
providers/dagster/: README.md  pyproject.toml
providers/dagster/examples/: definitions.py
providers/dagster/src/dagster_sparkpilot/: __init__.py  _compat.py  assets.py  client.py  common.py  errors.py  ops.py  resource.py
public-site/: .gitignore  README.md  (+3 more)
(+437 files in other folders)
