[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkpilot"
version = "0.1.0"
description = "SparkPilot AWS-first BYOC managed Spark control plane"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.38",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "typer>=0.16.0",
  "httpx>=0.28.0",
  "boto3>=1.38.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
sparkpilot = "sparkpilot.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
