[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-providers-sparkpilot"
version = "0.1.0"
description = "Apache Airflow provider for SparkPilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "apache-airflow>=2.8.0",
  "httpx>=0.24.0,<1.0.0",
]

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow.providers.sparkpilot.get_provider_info:get_provider_info"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
