[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-sparkpilot"
version = "0.1.0"
description = "Dagster integration package for SparkPilot run orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dagster>=1.8.0",
  "httpx>=0.24.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
